Fixed blackbar align on LTR

--- a/assets/src/sass/8-frontend/_frontend.scss
+++ b/assets/src/sass/8-frontend/_frontend.scss
@@ -8,6 +8,7 @@
     z-index: 9999;
     font-size: 16px;
     font-weight: 600;
+    text-align: left;
     background: #000;
     position: absolute;
     flex-direction: row;
